test/classes/diten/callNilClassesMethod.good
callNilClassesMethod.chpl:6: error: attempt to dereference nil
